# llmhub

./: .gitignore  Makefile  README.md
.claude/: settings.json
.github/workflows/: ci.yml  dev-build-deploy.yml  prod-build-deploy.yml  prod-deploy.yml  release-build.yml
app/: Makefile
app/admin/: .dockerignore  Dockerfile  package-lock.json  package.json
app/admin/app/: globals.css  layout.tsx
app/admin/app/(panel)/: layout.tsx
app/admin/app/lib/: admin-api.ts
app/admin/app/login/: page.tsx
app/cmd/account/: main.go
app/cmd/billing/: main.go
app/cmd/cli/: main.go
app/cmd/gateway/: main.go
app/cmd/llmhub/: main.go
app/cmd/scheduler/: main.go
app/cmd/worker/: main.go
app/configs/providers/: deepseek.yaml  volc.yaml
app/deploy/: Dockerfile  docker-compose.yml
app/deploy/dev/: .env.example  docker-compose.yml
app/deploy/prod/: .env.example  docker-compose.yml
app/internal/account/: server.go  usage.go
app/internal/admin/: catalog.go  pool.go  pool_events.go  providers.go  recon.go  server.go  users.go
app/internal/billing/client/: client.go  client_test.go
app/internal/billing/rpc/: rpc.go
app/internal/billing/server/: server.go  server_test.go
app/internal/capability/: capability.go
app/internal/capability/asr/: capability.go
app/internal/capability/chat/: alias.go  billing.go  billing_test.go  capability.go  handler.go  publish.go
app/internal/capability/embedding/: capability.go  handler.go  publish.go
app/internal/capability/translate/: capability.go
app/internal/domain/: catalog.go  embedding.go  errors.go  pool.go
app/internal/gateway/: adapters.go  dispatcher.go  embedding_invoker.go  middleware.go  mockprovider.go  provider_invoker.go  publisher.go  server.go
app/internal/iam/: apikey_test.go  service.go  session.go  session_memstore.go
app/internal/pool/: probe.go  service.go
app/internal/provider/: manager.go  manager_test.go  provider.go
app/internal/scheduler/: picker.go  scorer.go  scorer_test.go  service.go
app/internal/wallet/: errors.go  recharge.go  recharge_test.go
app/internal/worker/: aggregator.go  aggregator_test.go  export_test.go  reaper.go  reaper_test.go  recon.go  recon_test.go
app/migrations/: 00005_pool.sql
app/pkg/errcode/: errcode.go
app/proto/: buf.gen.yaml
app/sdks/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
app/sdks/.cargo/: config.toml
app/sdks/core/llmhub-core/: Cargo.toml
app/sdks/core/llmhub-core/src/: error.rs  lease.rs  lib.rs  report.rs  transport.rs
app/sdks/vendors/chat-openai/android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/sdks/vendors/chat-openai/android/llmhub-chat/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
app/sdks/vendors/chat-openai/android/llmhub-chat/src/main/kotlin/io/llmhub/chat/: LLMHubChat.kt  LLMHubException.kt  Models.kt  StreamListener.kt
app/sdks/vendors/chat-openai/android/llmhub-chat/src/main/kotlin/io/llmhub/chat/internal/: NativeBridge.kt
app/sdks/vendors/chat-openai/core/capability/: Cargo.toml
app/sdks/vendors/chat-openai/core/capability/src/: client.rs  lib.rs  stream.rs  types.rs
app/sdks/vendors/chat-openai/core/facade-ios/Sources/: LLMHubChat.swift
app/sdks/vendors/chat-openai/core/ffi-android/: Cargo.toml
app/sdks/vendors/chat-openai/core/ffi-android/src/: lib.rs
app/sdks/vendors/chat-openai/core/ffi-ios/: Cargo.toml  cbindgen.toml
app/sdks/vendors/chat-openai/core/ffi-ios/src/: lib.rs
app/sdks/vendors/chat-openai/core/scripts/: build-android.sh  build-ios.sh
app/sdks/vendors/chat-openai/ios/: README.md
app/sdks/vendors/chat-openai/ios/LLMHubChatKit/: Package.swift
app/services/: Makefile  go.mod  go.sum
app/services/configs/: app.dev.yaml  app.yaml  capabilities.yaml
app/services/migrations/: 00001_init_schemas.sql  00002_iam.sql  00003_wallet.sql  00004_catalog.sql  00006_metering.sql  00007_audit.sql  00008_pool_v2.sql  00009_catalog_v2.sql  00010_metering_v2_columns.sql  00011_sdk_lease_subscription.sql  00012_adminauth.sql
app/test/golden/: golden_test.go
app/web/: Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-workspace.yaml
app/web/admin/: next.config.ts  package.json
app/web/admin/app/: layout.tsx  (+1 more)
app/web/app/: layout.tsx  page.tsx
app/web/console/: next.config.ts  package.json  tsconfig.json
app/web/www/: next.config.ts  package.json
deploy/: README.md
deploy/dev/: .env.example  README.md  docker-compose.yml
deploy/local/: .env.example  README.md  docker-compose.yml
deploy/prod/: .env.example  README.md  docker-compose.yml
docs/: 01-业务需求文档.md  02-项目框架设计.md  03-核心数据结构设计-v2.md  03-核心数据结构设计.md  04-模块接口设计.md  05-能力域专项设计.md  06-Go框架设计与厂商扩展.md  07-五层重构实施计划.md
preview/: admin-light.html  index.html  redesign-pool.html  web-light.html
sdk/go/: README.md  chat.go  go.mod  lease.go  llmhub.go  report.go  transport_openai_compat.go
sdk/go/example/: go.mod  main.go
(+228 files in other folders)
