[package]
name        = "llmhub-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish     = false
description = "Shared core for LLMHub SDKs: lease issuance, usage reporting, hardened HTTP."

[lib]
crate-type = ["rlib"]

[dependencies]
ureq       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
log        = { workspace = true }
litcrypt2  = { workspace = true }
