[package]
name        = "llmhub-chat-openai"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish     = false
description = "Chat completions capability for LLMHub SDKs — OpenAI-compatible wire protocol."

[lib]
crate-type = ["rlib"]

[dependencies]
llmhub-core = { workspace = true }
ureq        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
log         = { workspace = true }
litcrypt2   = { workspace = true }
